// Produced by Acceleo Python Generator 1.1.0-R7S1-20151214

import "ccsds_mal/types.proto";

package ccsds_com.protobuf;

message QueryFilter {
extensions 1 to 101;

  
}
