// Produced by Acceleo Cpp Generator 1.1.0-R7S1-20151214


package dataControllerUtils.protobuf;

message DataQueryFilter {
extensions 4 to 107;
    optional string lhs = 1;
    optional string comp = 2;
    optional string rhs = 3;
}
